--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -2,7 +2,7 @@ build:
   version: "2.0"
 
 loans:
-  message: "Welcome to Bank accounts related prod APIs "
+  message: "Welcome to Bank Loans related QA APIs "
   contactDetails:
     name: "Gopal Pandey - QA lead"
     email: "gopal@bank.com"
